--- a/src/DL_Core_WebAPP_Release/Areas/Admin/Views/Roles/create.cshtml
+++ b/src/DL_Core_WebAPP_Release/Areas/Admin/Views/Roles/create.cshtml
@@ -23,7 +23,7 @@
 
                     @foreach (var permission in permissions)
                     {
-                        <input type="checkbox" value="@permission" name="permissions" />@permission
+                        <input type="checkbox" value="@permission" name="claims" />@permission
                         <br />
                     }
 
