--- a/src/DL_Core_WebAPP_Release/Areas/Admin/Views/AdminUsers/Edit.cshtml
+++ b/src/DL_Core_WebAPP_Release/Areas/Admin/Views/AdminUsers/Edit.cshtml
@@ -11,7 +11,28 @@
             <b>Edit Admin User</b>
         </div>
         <div class="panel-body">
-            @using (Html.BeginForm())
+            <form method="post" asp-antiforgery="true">
+                <input type="hidden" asp-for="Id" />
+                <div class="form-group">
+                    <label asp-for="UserName" class="control-label"></label>
+                    <span style="font-weight: bold" class="form-control" disabled>@Model.UserName</span>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Role</label>
+                    <div>
+                        <select asp-for="Role" asp-items="ViewBag.Roles" class="form-control">
+                            <option value="">Select a Role</option>
+                        </select>
+                    </div>
+                    <span asp-validation-for="Role" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Update" class="btn btn-success" />
+                    <a asp-action="Index" class="btn btn-warning">Cancel</a>
+                </div>
+            </form>
+
+            @*@using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(model => model.Id)
@@ -31,7 +52,7 @@
                     <input type="submit" value="Update" class="btn btn-success" />
                     @Html.ActionLink("Cancel", "Index", new { }, new { @class = "btn btn-warning" })
                 </div>
-            }
+            }*@
         </div>
     </div>
 </div>
