--- a/src/DL_Core_WebAPP_Release/Areas/Admin/Views/AdminUsers/Index.cshtml
+++ b/src/DL_Core_WebAPP_Release/Areas/Admin/Views/AdminUsers/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div>
-    @Html.ActionLink("Add User", "Create", new { }, new { @class = "btn btn-success" })
+    <a asp-action="Create" class="btn btn-success">Add User</a>
 </div>
 
 <div class="panel panel-primary">
@@ -40,14 +40,16 @@
                             @Html.DisplayFor(modelItem => item.Email)
                         </td>
                         <td>
-                            @await Component.InvokeAsync("RoleForUser", new { user = item })
+                            @{var userRole = await Component.InvokeAsync("RoleForUser", new { user = item });}
+                            @userRole
                         </td>
 
 
-                        <td>
-                            @Html.ActionLink("", "Edit", new { id = item.Id }, new { @class = "glyphicon glyphicon-edit" })
-                            @Html.ActionLink("", "Delete", new { id = item.Id }, new { @class = "glyphicon glyphicon-remove" })
-
+                        <td user-name="@item.UserName" role-name="">
+                            @*@Html.ActionLink("", "Edit", new { id = item.Id }, new { @class = "glyphicon glyphicon-edit" } )*@
+                            <a asp-action="Edit" asp-route-id="@item.Id" class="glyphicon glyphicon-edit" title="Edit the admin user"></a>
+                            <a asp-action="Delete" asp-route-id="@item.Id" class="glyphicon glyphicon-remove" title="Delete the admin user"></a>
+                            @*@Html.ActionLink("", "Delete", new { id = item.Id }, new { @class = "glyphicon glyphicon-remove" })*@
                         </td>
                     </tr>
                 }
