--- a/src/DL_Core_WebAPP_Release/Areas/Admin/Views/AdminUsers/delete.cshtml
+++ b/src/DL_Core_WebAPP_Release/Areas/Admin/Views/AdminUsers/delete.cshtml
@@ -6,25 +6,33 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Admin User</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserName)
-        </dt>
-    </dl>
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+<div style="width:700px;">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <b>Are you sure you want to delete this Admin user?</b>
         </div>
-    }
+        <div class="panel-body">
+            <div>
+                <dl>
+                    <dt>
+                        @*@Html.DisplayNameFor(model => model.UserName)*@
+                        <label asp-for="UserName"></label>
+                    </dt>
+                    <dd>
+                        @*@Html.DisplayFor(model => model.UserName)*@
+                        @Model.UserName
+                    </dd>
+
+                </dl>
+            </div>
+            <div>
+                <form asp-action="Delete" asp-route-id="@Model.Id" method="post" asp-antiforgery="true">
+                    <div class="form-actions no-color">
+                        <input type="submit" value="Delete" class="btn btn-danger" />
+                        <a asp-action="Index" class="btn btn-warning">Cancel</a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
