--- a/src/DL_Core_WebAPP_Release/Areas/Admin/Views/Books/Delete.cshtml
+++ b/src/DL_Core_WebAPP_Release/Areas/Admin/Views/Books/Delete.cshtml
@@ -2,81 +2,86 @@
 
 @{
     ViewBag.Title = "Delete";
-    //Layout = "~/Areas/Admin/Views/Shared/_AdminLayoutPage.cshtml";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Book</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Author.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Author.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Category.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Category.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Publisher.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Publisher.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ISBN)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ISBN)
-        </dd>
-
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalCopies)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TotalCopies)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AvailableCopies)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AvailableCopies)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+<div style="width:700px;">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <b>Are you sure you want to delete this Book?</b>
         </div>
-    }
+        <div class="panel-body">
+            <div>
+                <dl>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Title)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Title)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Author.Name)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Author.Name)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Category.Name)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Category.Name)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Publisher.Name)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Publisher.Name)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.ISBN)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.ISBN)
+                    </dd>
+
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.TotalCopies)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.TotalCopies)
+                    </dd>
+
+                    <dt>
+                        @Html.DisplayNameFor(model => model.AvailableCopies)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.AvailableCopies)
+                    </dd>
+
+                </dl>
+
+            </div>
+            <div>
+                <form asp-action="Delete" method="post" asp-route-id="@Model.BookId" asp-antiforgery="true">
+                    <div class="form-actions no-color">
+                        <input type="submit" value="Delete" class="btn btn-danger" />
+                        <a asp-action="Index" class="btn btn-warning">Cancel</a>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
+
