--- a/src/DL_Core_WebAPP_Release/Areas/Admin/Views/Publishers/Edit.cshtml
+++ b/src/DL_Core_WebAPP_Release/Areas/Admin/Views/Publishers/Edit.cshtml
@@ -62,7 +62,7 @@
 <div style="width:700px;">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <b>Edit Publisher!</b>
+            <b>Edit Publisher</b>
         </div>
         <div class="panel-body">
             <form method="post" asp-antiforgery="true">
