--- a/src/DL_Core_WebAPP_Release/Areas/Admin/Views/Roles/delete.cshtml
+++ b/src/DL_Core_WebAPP_Release/Areas/Admin/Views/Roles/delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model Category
+﻿@using Microsoft.AspNetCore.Identity.EntityFrameworkCore
+@model IdentityRole
 
 @{
     ViewBag.Title = "Delete";
@@ -7,7 +8,7 @@
 <div style="width:700px;">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <b>Are you sure you want to delete this Category?</b>
+            <b>Are you sure you want to delete this Role?</b>
         </div>
         <div class="panel-body">
             <div>
@@ -15,23 +16,13 @@
                     <dt>
                         @Html.DisplayNameFor(model => model.Name)
                     </dt>
-
                     <dd>
                         @Html.DisplayFor(model => model.Name)
                     </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Description)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Description)
-                    </dd>
-
                 </dl>
             </div>
             <div>
-                <form asp-action="Delete" method="post" asp-route-id="@Model.CategoryID" asp-antiforgery="true">
+                <form asp-action="Delete" method="post" asp-route-id="@Model.Id" asp-antiforgery="true">
                     <div class="form-actions no-color">
                         <input type="submit" value="Delete" class="btn btn-danger" />
                         <a asp-action="Index" class="btn btn-warning">Cancel</a>
