--- a/src/DL_Core_WebAPP_Release/Views/Shared/_Layout.cshtml
+++ b/src/DL_Core_WebAPP_Release/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a asp-controller="Home">Home</a></li>
+                    <li class="active"><a asp-controller="Library" asp-action="Index">Home</a></li>
                     <li><a asp-action="DisplayViewCart" asp-controller="Library">ViewCart</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
