--- a/src/DL_Core_WebAPP_Release/Areas/Admin/Views/Publishers/Delete.cshtml
+++ b/src/DL_Core_WebAPP_Release/Areas/Admin/Views/Publishers/Delete.cshtml
@@ -7,7 +7,7 @@
 <div style="width:700px;">
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <b>Are you sure you want to delete this Author?</b>
+            <b>Are you sure you want to delete this Publisher?</b>
         </div>
         <div class="panel-body">
             <div>
